# RAG

./: .gitignore  CREWAI_VLLM_INTEGRATION.md  Groq.md  Install Open WebUI.md  README.md  check_gpu.py  cuda.md  pyproject.toml  requirements-cuda.txt  requirements.txt  start_mixtral_server.sh  uv.md  wsl.md
src/: __init__.py  custom_embedding_impl.py  custom_ingestion_pipeline.py  custom_ingestion_vector_db.py  custom_langchain_rag_generator.py  custom_langchain_rag_retriever.py  force_cleanup.py  lang_graph_langchain_tools_reflection_agent.py  lang_graph_manual_tools_reflection_agent.py  lang_graph_reflection_agent.py  lang_graph_structured_reflection_agent.py  lang_graph_unstructured_reflection_agent.py  langchain_chat_retriever_custom.py  langchain_chat_retriever_simple.py  langchain_ingestion_pipeline.py  langchain_ingestion_vector_db.py  langchain_prompt_simple.py  langchain_promt_template.py  langchain_rag_generator.py  langchain_rag_retriever.py  refection_logger.py
src/agents/elminster/: knowledge.py  questions.py  thought_process.py
src/embedding/: embedding_manager.py
src/embeddings/: __init__.py  embedding_manager.py  embedding_model_interace.py
src/embeddings/huggingface_transformer/: __init__.py  langchain_embedding.py  llama_index_embedding_derived.py  local_model.py
src/embeddings/vllm/: langchain_embedding.py
src/experiments/: crewai_llm_agent_test.py  lang_graph_structured_reflection_agent.py  lang_graph_unstructured_reflection_agent.py  langchain_rag_generator.py  langchain_rag_retriever.py
src/inference/: __init__.py
src/inference/vllm_srv/: LangChainVLLM.md  LangChain_VLLM.md  README_VLLM_CHAT.md  __init__.py  cleaner.py  facebook_langchain.py  (+10 more)
src/ingestion/: __init__.py  base_document_chunker.py  custom_document_loaders_example.py  custom_llamaindex_readers_example.py  data_ingestion_pipeline.py  doc_parser.py  doc_parser_langchain.py  doc_parser_llama_index.py  hierarchical_retriever_example.py
src/retrieval/: query_retrieval_pipeline.py
src/utils/: data_ingestion_pipeline_impl.py  embedding_impl.py
src/vectordatabases/: Vector_DB.md  __init__.py  chroma_vector_db.py  chroma_vector_db_commands.py  fais_vector_db_commands.py  faiss_vector_db.py  mmr_with_scores.py  qdrant_vector_db.py  qdrant_vector_db_commands.py  refresh_question_context_tool.py  retriever_strategies.py  vector_db_factory.py  vector_db_interface.py
src/vllm_srv/: __init__.py  basic.py  chroma_vector_db.py  data_ingestion_pipeline.py  data_ingestion_pipeline_impl.py  doc_parser.py  embedding_impl.py  facebook.py  faiss_vector_db.py  force_cleanup.py  main.py  mistral_optimized.py  model_comparison.py  qdrant_vector_db.py  query_retrieval_pipeline.py  rag_simple.py  vector_db_factory.py  vector_db_interface.py  working_models_16gb.py
test_docs/: Jonas Plan.txt  MAGES.txt  test1.txt  test2.txt
(+27 files in other folders)
