[project]
name = "vllm-srv"
version = "0.1.0"
description = "AI Language Model Demo Server using vLLM"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9,<3.13"
dependencies = [
    "vllm>=0.5.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "numpy>=1.21.0",
    "packaging>=21.0",
    "psutil>=5.9.0",
    "ray>=2.5.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    # LangChain dependencies for document processing
    "langchain>=0.3.0",
    "langchain-community>=0.0.20",
    "pymupdf>=1.23.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "openai>=2.2.0",
    "requests>=2.32.5",
    "faiss-cpu>=1.12.0",
    "qdrant-client>=1.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
gpu = [
    "faiss-gpu>=1.7.2,<=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
index-url = "https://pypi.org/simple"
